--- a/home.html
+++ b/home.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>White Box Testing</title>
+    <style>
+        html {
+            background-image: linear-gradient(#a0d2eb, #e5eaf5, #d0bdf4, #8458B3, #a28089);
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
     
