--- a/home.html
+++ b/home.html
@@ -13,6 +13,16 @@
     </style>
 </head>
 <body>
-    
+    <header>
+        <nav class="main-navbar">
+            <ul>
+                <li>
+                    <a href="home.html">Home</a>
+                    <a href="examples.html">Examples</a>
+                    <a href="feedback.html">Feedback</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
