remove tags id and classes

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="main-navbar">
+        <nav>
             <ul>
                 <li>
                     <a href="home.html">Home</a>
@@ -24,9 +24,9 @@
             </ul>
         </nav>
     </header>
-    <article id="theory">
+    <article>
         <h1>White-box testing</h1>
-        <section id="definition" class="theory-section">
+        <section>
             <h2>What is it?</h2>
             <p>
                 <b>White-box testing</b> is a testing technique in which software’s internal structure, design, 
@@ -35,12 +35,12 @@
                 so it is also called Clear box testing, Open box testing, Transparent box testing, 
                 Code-based testing, and Glass box testing.
             </p>
-            <figure id="image">
+            <figure>
                 <img 
                     src="images/white.jpg"
                     alt="White-box"
                     width="400" />
-                <figcaption id="figcap">
+                <figcaption>
                     <a href="https://assets.website-files.com/5ff66329429d880392f6cba2/62750c7611a53c3bc9d85f98_White%20Box%20Testing-p-800.jpeg">Image source</a>
                 </figcaption>
             </figure>
@@ -57,7 +57,7 @@
                 inner workings of the software so that only the end-user experience can be tested.
             </p>
         </section>
-        <section id="usage" class="theory-section">
+        <section>
             <h2>What do you verify in White Box Testing?</h2>
             <p>
                 White box testing involves the testing of the software code for the following:
