input image tag instead of img tag

--- a/home.html
+++ b/home.html
@@ -36,10 +36,11 @@
                 Code-based testing, and Glass box testing.
             </p>
             <figure>
-                <img 
+                <!--<img 
                     src="images/white.jpg"
                     alt="White-box"
-                    width="400" />
+                    width="400" />-->
+                <input type="image" src="images/white.jpg" alt="White-box" width="400">
                 <figcaption>
                     <a href="https://assets.website-files.com/5ff66329429d880392f6cba2/62750c7611a53c3bc9d85f98_White%20Box%20Testing-p-800.jpeg">Image source</a>
                 </figcaption>
@@ -89,7 +90,7 @@
     </article>
     <footer>
         <h3>To see white-box examples:</h3>
-        <input type="button" onlick="examples.html" value="Click here!">
+        <input type="button" onlick="location.href='examples.html';" value="Click here!">
     </footer>
 </body>
 </html>
