youtube video added

--- a/home.html
+++ b/home.html
@@ -57,6 +57,9 @@
                 workings. Likewise, the “black box” in “Black Box Testing” symbolizes not being able to see the 
                 inner workings of the software so that only the end-user experience can be tested.
             </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3bJcvBLJViQ" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
         </section>
         <section>
             <h2>What do you verify in White Box Testing?</h2>
@@ -86,11 +89,15 @@
                 <li>understand the source of code</li>
                 <li>create test cases and execute</li>
             </ol>
+            <input type="button" onlick="location.href='examples.html';" value="Examples">
         </section>
     </article>
     <footer>
-        <h3>To see white-box examples:</h3>
-        <input type="button" onlick="location.href='examples.html';" value="Click here!">
+        <p>
+            Did it benefit? 
+            Please, give me your 
+            <a href="feedback.html">feedback</a>
+        </p>
     </footer>
 </body>
 </html>
