--- a/examples.html
+++ b/examples.html
@@ -4,9 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>White-box testing examples</title>
+    <style> 
+        .tab1 {
+            display: inline-block;
+            margin-left: 40px;
+        }
+
+        .tab2 {
+            display: inline-block;
+            margin-left: 80px;
+        }
+
+        img {
+            width: 150px;
+            
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="home.html">Home</a>
+                    <a href="examples.html">Examples</a>
+                    <a href="feedback.html">Feedback</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <article>
+        <h1>White-box testing</h1>
+        <section>
+            <h2>Examples</h2>
+            <p>
+                Consider the following piece of code:
+            </p>
+            <p>
+                <code>
+                    <p>Printme (int a, int b) {</p>
+                    <p><span class="tab1"></span>int result = a + b;</p>
+                    <p><span class="tab1"></span>If (result> 0)</p>
+                    <p><span class="tab2"></span>Print ("Positive", result)</p>
+                    <p><span class="tab1"></span>Else</p>
+                    <p><span class="tab2"></span>Print ("Negative", result)</p>
+                    <p><span class="tab1"></span>}</p>
+                </code>
+            </p>
+            <p>
+                The goal of WhiteBox testing in software engineering is 
+                to verify all the decision branches, loops, and statements in the code.
+            </p>
+            <p>
+                To exercise the statements in the below white box testing example, WhiteBox test cases would be
+            </p>
+            <ul>
+                <li>A=1, B=1</li>
+                <li>A=-1, B=-3</li>
+            </ul>
+        </section>
+        <section>
+            <h2>White Box Testing Tools</h2>
+            <p>Below is a list of top white box testing tools:</p>
+        </section>
+        <table>
+            <tr>
+                <th>EclEmma</th>
+                <th>NUnit</th>
+                <th>PyUnit</th>
+                <th>HTMLUnit</th>
+            </tr>
+            <tr>
+                <td><img src="images/eclemma.jpg" alt="eclemma"></td>
+                <td><img src="images/nunit.jpg" alt="NUnit"></td>
+                <td><img src="images/PYUnit.jpg" alt="PyUnit"></td>
+                <td><img src="images/HtmlUnit.jpg" alt="HTMLUnit"></td>
+            </tr>
+        </table>
+    </article>
 </body>
 </html>
