source of information

--- a/home.html
+++ b/home.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Box Testing</title>
     <style>
-        html {
+        /*html {
             background-image: linear-gradient(#a0d2eb, #e5eaf5, #d0bdf4, #8458B3, #a28089 50%);
             background-attachment: fixed;
-        }
+        }*/
     </style>
 </head>
 <body>
@@ -97,6 +97,9 @@
             Did it benefit? 
             Please, give me your 
             <a href="feedback.html">feedback</a>
+        </p>
+        <p>
+            <a href="https://www.guru99.com/white-box-testing.html">Source of information</a>
         </p>
     </footer>
 </body>
