link to general css file added

--- a/examples.html
+++ b/examples.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White-box testing examples</title>
+    <link rel="stylesheet" href="css/main_style.css">
     <style> 
+        /*
         * {box-sizing: border-box;}
         
         body {
@@ -58,7 +60,7 @@
 
         #nav-list {
             list-style-type: none;
-        }
+        }*/
 
         .tab {
             display: inline-block;
