--- a/home.html
+++ b/home.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Box Testing</title>
+    <link rel="stylesheet" href="css/main_style.css">
     <style>
+        /*
         * {box-sizing: border-box;}
         
         body {
@@ -35,7 +37,7 @@
             padding: 15px;
             text-align: center;
         }
-
+        */
 
         .main {
             display: flex;
@@ -54,7 +56,7 @@
             padding: 20px;
         }
 
-
+        /*
         .main-nav {
             display: flex;
             background-color: #b0aac0;
@@ -77,6 +79,10 @@
             color: white;
         }
 
+        #nav-list {
+            list-style-type: none;
+        }
+        */
 
         .insert-image {
             position: relative;
@@ -100,11 +106,6 @@
 
         .insert-image:hover .image-overlay {
             opacity: 1;
-        }
-
-
-        #nav-list {
-            list-style-type: none;
         }
 
         figure {
