--- a/feedback.html
+++ b/feedback.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
+    <link rel="stylesheet" href="css/main_style.css">
     <style>
-        * {box-sizing: border-box;}
+        /** {box-sizing: border-box;}
         
         body {
             font-family: Arial;
@@ -59,7 +60,7 @@
         #nav-list {
             list-style-type: none;
         }
-
+        */
         label {
             display: inline-block;
             clear: left;
