home.html changed to index.html

--- a/examples.html
+++ b/examples.html
@@ -100,7 +100,7 @@
         <nav class="main-nav">
             <ul id="nav-list">
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a class="active" href="examples.html">Examples</a>
                     <a href="feedback.html">Feedback</a>
                 </li>
