--- a/feedback.html
+++ b/feedback.html
@@ -80,7 +80,7 @@
         <nav class="main-nav">
             <ul id="nav-list">
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="examples.html">Examples</a>
                     <a class="active" href="feedback.html">Feedback</a>
                 </li>
