--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <nav class="main-nav">
             <ul id="nav-list">
                 <li>
-                    <a class="active" href="home.html">Home</a>
+                    <a class="active" href="index.html">Home</a>
                     <a href="examples.html">Examples</a>
                     <a href="feedback.html">Feedback</a>
                 </li>
